Add page to sections to post section

--- a/src/pages/add-sections.astro
+++ b/src/pages/add-sections.astro
@@ -20,7 +20,58 @@ fs.writeFileSync(filePath, JSON.stringify(dataDB)) */
 ---
 
 <Layout title="Agregar secciones">
-  <form id="form">
-    
-  </form>
+  <main class="flex flex-col justify-center">
+    <div class="flex gap-40 justify-center items-center mt-10 mb-10">
+      <h2 class="text-4xl">Agregar Seccion</h2>
+      <a href="/" class="text-xl font-bold py-2.5 px-5 me-2 mb-2 text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Regresar al Inicio</a>
+    </div>
+    <form class="w-[30%] mx-auto" id="form">
+      <div class="mb-5">
+        <label for="section-name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre de la seccion:</label>
+        <input id="section-name" name="sectionName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Seccion..." required />
+      </div>
+      
+      <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        Enviar
+      </button>
+    </form>
+  </main>
 </Layout>
+
+<script>
+  const $form = document.getElementById('form')
+
+  const postSection = async (sectionName: String) => {
+    const data = {
+      name: sectionName
+    }
+
+    await fetch(
+      'http://localhost:4321/api/post-section.json', 
+      {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      }
+    )
+
+    alert('Se ha registrado correctamente la seccion')
+  }
+
+  $form?.addEventListener('submit', async (event) => {
+    const { target } = event
+    event.preventDefault()
+
+    if (!target) return 
+
+    const data = Object.fromEntries(
+      new FormData(target as HTMLFormElement)
+    )
+
+    const { sectionName } = data
+
+    await postSection(String(sectionName))
+  })
+</script>
