Change to font bold section

--- a/src/pages/sections/[section].astro
+++ b/src/pages/sections/[section].astro
@@ -20,7 +20,7 @@ const studentSection = students.filter((studentEl) => {
 <Layout title={`Seccion ${section}`}>
   <div class="m-9 flex flex-col justify-center">
     <header class="flex gap-40 justify-center items-center">
-      <h2 class="text-xl">Nombre de la seccion: {section}</h2>
+      <h2 class="text-xl">Nombre de la seccion: <span class="font-bold">{section}</span></h2>
 
       <div>
         <a href="#" class="text-xl font-bold py-2.5 px-5 me-2 mb-2 text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Agregar Estudiante</a>
