--- a/src/pages/students/[baseUrlSection].astro
+++ b/src/pages/students/[baseUrlSection].astro
@@ -12,7 +12,7 @@ const [sectionToAddStudent]: Section[] = sections.filter(section => {
     return section.baseURL === baseUrlSection
 })
 
-const { id: idSection } = sectionToAddStudent
+// const { id: idSection } = sectionToAddStudent
 ---
 
 <Layout title='Agregar Estuante'>
