--- a/src/pages/sections/[section].astro
+++ b/src/pages/sections/[section].astro
@@ -31,11 +31,11 @@ const studentSection = students.filter((studentEl) => {
       {
         studentSection.map(
           sectionElement => {
-            const { name } = sectionElement
+            const { name, baseURL } = sectionElement
             return ( 
               <section class="">
                 <h2>
-                  <a href={`#`} class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                  <a href={`/sections/student/${baseURL}`} class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                       {name}
                     </h5>
